[package]
name = "rollup"
version = "0.1.0"
edition = "2024"
description = "Terminal dashboard for GitHub PR review workload"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
crossterm = "0.29.0"
open = "5.3.3"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
